@@ -1,3 +1,11 @@
+2015-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tools/tiff2pdf.c (t2p_readwrite_pdf_image): Fix Coverity 298621
+	"Resource leak".
+	(t2p_readwrite_pdf_image): Fix Coverity 1024181 "Structurally dead
+	code".
+	(t2p_write_pdf): Fix Coverity 1227690 "Unused value".
+
 2015-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* contrib/iptcutil/iptcutil.c (formatIPTC): Fix Coverity 1024468
